[package]
name = "async-task-tracker"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["bdbai <bdbaiapp@163.com>", "Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/bdbai/async-task-tracker"
description = "A task tracker used for waiting until tasks exit."
categories = ["asynchronous"]
exclude = [".github", "rustfmt.toml"]

[features]
std = ["event-listener/std"]

[dependencies]
event-listener = { version = "5", default-features = false }
pin-project-lite = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# it's necessar not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "docsrs"]
